[package]
name = "chapter_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano", version = "0.29.0" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", version = "0.29.0" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", version = "0.29.0" }
winit = "0.26.1"
image = "0.24.3"
rand = "0.8.5"
bytemuck = "1.10.0"
